--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "@evacuate/translate",
   "version": "1.0.0",
   "description": "",
-  "keywords": [
-    "evacuate"
-  ],
+  "keywords": ["evacuate"],
   "homepage": "https://github.com/evacuate/translate#readme",
   "bugs": {
     "url": "https://github.com/evacuate/translate/issues"
@@ -18,11 +16,16 @@
   "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
-    "build": "node scripts/rm.mjs dist && node scripts/build.mjs"
+    "build": "node scripts/rm.mjs dist && node scripts/build.mjs",
+    "check": "biome check ./src",
+    "check:write": "biome check --write ./src",
+    "format": "biome format .",
+    "format:write": "biome format --write ./src",
+    "lint": "biome lint ./src",
+    "sort": "node scripts/sort.mjs",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
