--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "node scripts/rm.mjs dist && node scripts/build.mjs",
     "check": "biome check ./src",
     "check:write": "biome check --write ./src",
-    "format": "biome format .",
+    "format": "biome format ./src",
     "format:write": "biome format --write ./src",
     "lint": "biome lint ./src",
     "sort": "node scripts/sort.mjs",
