--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@evacuate/translate",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "",
   "homepage": "https://github.com/evacuate/translate#readme",
   "bugs": {
@@ -15,6 +15,7 @@
   "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": ["dist"],
   "scripts": {
     "build": "node scripts/rm.mjs dist && node scripts/build.mjs",
