--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@evacuate/translate",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "",
   "homepage": "https://github.com/evacuate/translate#readme",
   "bugs": {
@@ -13,6 +13,10 @@
   "license": "MIT",
   "author": "evacuate",
   "type": "module",
+  "exports": {
+    "import": "./dist/index.js",
+    "require": "./dist/cjs/index.js"
+  },
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
