--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@evacuate/translate",
   "version": "1.3.0",
   "description": "",
+  "packageManager": "yarn@1.22.22",
   "homepage": "https://github.com/evacuate/translate#readme",
   "bugs": {
     "url": "https://github.com/evacuate/translate/issues"
@@ -12,6 +13,7 @@
   },
   "license": "MIT",
   "author": "evacuate",
+
   "type": "module",
   "exports": {
     "import": "./dist/index.js",
@@ -20,9 +22,7 @@
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "node scripts/rm.mjs dist && node scripts/build.mjs",
     "check": "biome check ./src",
