--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@evacuate/translate",
   "version": "1.3.0",
   "description": "",
-  "packageManager": "yarn@1.22.22",
   "homepage": "https://github.com/evacuate/translate#readme",
   "bugs": {
     "url": "https://github.com/evacuate/translate/issues"
@@ -41,5 +40,6 @@
     "typescript": "^5.6.3",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.1.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
