--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "types": "dist/index.d.ts",
   "files": ["dist"],
   "scripts": {
-    "build": "node scripts/rm.mjs dist && node scripts/build.mjs",
+    "build": "node scripts/rm.mjs && node scripts/build.mjs",
     "check": "biome check ./src",
     "check:write": "biome check --write ./src",
     "format": "biome format ./src",
