--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^2.1.8"
   },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "pnpm@9.15.0"
 }
