--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /workspace
 COPY ../package.json ../pnpm-lock.yaml ./
 
 # Install pnpm
-RUN corepack enable && corepack prepare pnpm@latest --activate
+RUN npm install -g pnpm
 
 # Install dependencies
 RUN pnpm install --frozen-lockfile
